--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,18 +8,26 @@ jobs:
     strategy:
       matrix:
         python-version: [ 2.7, 3.5, 3.6, 3.7, 3.8, 3.9 ]
-
+        cffi: [ yes, no ]
+        include:
+          - python-version: pypy2
+            cffi: no
+          - python-version: pypy3
+            cffi: no
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Display Python version
+      run: python -c "from __future__ import print_function; import sys; print(sys.version)"
     - name: Install dependencies
       run: |
-        sudo apt-get install libgmp10
-        pip install setuptools
-        pip install cffi
+        if [ ${{ matrix.cffi}} == yes ]; then pip install cffi; fi
     - name: Test
-      run:
+      run: |
+        export CFLAGS+=" -Wconversion"
+        xflags="-bb"
+        if [ ${{ matrix.python-version}} != pypy3 ]; then xflags+=" -tt"; fi
         python $xflags setup.py test --skip-slow-tests
