--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,21 @@ jobs:
         if [ ${{ matrix.python-version}} != pypy3 ]; then xflags+=" -tt"; fi
         python $xflags setup.py test --skip-slow-tests
 
+  mypy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install dependencies
+      run: |
+        pip install mypy
+    - name: Test
+      run: |
+        mypy lib/
+
   test_c:
     runs-on: ubuntu-latest
     steps:
