--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -17,11 +17,8 @@ jobs:
           - python-version: pypy3
             cffi: no
             os: ubuntu-latest
-            env:
-              PYTHON_FLAGS: "-bb"
     env:
       CFLAGS: "-Wconversion"
-      PYTHON_FLAGS: "-bb -tt"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -35,7 +32,7 @@ jobs:
       run: pip install cffi
     - name: Test
       run: |
-        python $PYTHON_FLAGS setup.py test --skip-slow-tests
+        python -bb setup.py test
 
   mypy:
     runs-on: ubuntu-latest
