--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,14 +25,20 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Display Python version
       run: python -c "from __future__ import print_function; import sys; print(sys.version)"
-    - name: Install dependencies
-      if: ${{ matrix.cffi }} == yes }}
+
+    - name: Install CFFI
+      if: matrix.cffi == 'yes'
       run: pip install cffi
+
+    - name: Install MSVC
+      if: matrix.os == 'windows-latest' && matrix.python-version == '2.7'
+      run: choco install vcpython27
+
     - name: Test
-      run: |
-        python -bb setup.py test
+      run: python -bb setup.py test
 
   mypy:
     runs-on: ubuntu-latest
