--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -22,6 +22,11 @@ jobs:
         run: |
           python -m pip install cibuildwheel==1.6.4
 
+      - name: Install Visual C++ for Python 2.7
+        if: runner.os == 'Windows'
+        run: |
+          choco install vcpython27 -f -y
+
       - name: Build wheels
         run: |
           python -m cibuildwheel --output-dir wheelhouse
